tests/NormalTests/paczka1/fuzzy1/94636459.err
Error in line 3: xd4z4j A656 18,7
Error in line 8: bWSCCd A656 99,6
Error in line 22: A656 A813 36,6
Error in line 19: Rbv S349 15,4
Error in line 33: LcLjQppCS A813 -2,9
